--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=Google Inc.:Google APIs:16
-android.library.reference.1=../ActionBarSherlock
-android.library.reference.3=../android.security.client
-android.library.reference.4=../protocol-carrier
-android.library.reference.2=../android.storage
+android.library.reference.1=..\\ActionBarSherlock
+android.library.reference.3=..\\protocol-carrier
+android.library.reference.2=..\\android.storage
+android.library.reference.4=../../smartcampus-android/android.aac
