--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,10 +58,10 @@
             android:launchMode="singleTop" 
             android:configChanges="orientation|screenSize"
             >
-<!--          <intent-filter> -->
-<!--                 <action android:name="android.intent.action.MAIN" /> -->
-<!--                 <category android:name="android.intent.category.LAUNCHER" /> -->
-<!--             </intent-filter>  -->
+          <intent-filter> -->
+                 <action android:name="android.intent.action.MAIN" /> -->
+                 <category android:name="android.intent.category.LAUNCHER" /> -->
+             </intent-filter>  -->
             
             <intent-filter>
                 <action android:name="eu.trentorise.smartcampus.START" />
