new icon, navigation drawer fix bugs

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,7 +82,7 @@
             </intent-filter>
             
         </activity>    
-        
+        <activity android:name=".settings.SettingsActivity" />
        
         <!-- <activity -->
         <!-- android:name=".MyProfileActivity" -->
