--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,11 +84,14 @@
         </activity>    
         <activity android:name=".settings.SettingsActivity" />
        
-        <!-- <activity -->
-        <!-- android:name=".MyProfileActivity" -->
-        <!-- android:label="@string/app_name" -->
-        <!-- android:launchMode="singleTask" > -->
-        <!-- </activity> -->
-    </application>
+        <activity
+            android:name="com.github.espiandev.showcaseview.TutorialActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
+            android:theme="@style/TutorialTheme" >
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+     </application>
 
 </manifest>
