make use of the new class LauncherHelper from common

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,15 +58,15 @@
             android:launchMode="singleTop" 
             android:configChanges="orientation|screenSize"
             >
-<!--           <intent-filter> -->
-<!--                  <action android:name="android.intent.action.MAIN" /> -->
-<!--                  <category android:name="android.intent.category.LAUNCHER" /> -->
-<!--              </intent-filter>  -->
-            
-            <intent-filter>
+          <intent-filter>
+                 <action android:name="android.intent.action.MAIN" />
+                 <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter> 
+             
+<!--             <intent-filter>
                 <action android:name="eu.trentorise.smartcampus.START" />
                 <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+            </intent-filter> -->
             
         </activity>
         
