--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,6 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    
     <application
         android:icon="@drawable/ic_launcher_cm"
         android:label="@string/app_name"
@@ -37,7 +36,7 @@
         android:logo="@drawable/logo"
         android:theme="@style/Theme.communitymanager" >
         <uses-library android:name="com.google.android.maps" />
-        
+
         <meta-data
             android:name="eu.trentorise.smartcampus.account.AUTH_URL"
             android:value="https://ac.smartcampuslab.it/aac" />
@@ -50,37 +49,34 @@
         <meta-data
             android:name="eu.trentorise.smartcampus.account.ACCOUNT_BASED_ACCESS"
             android:value="true" />
-        
-         
+
         <activity
             android:name="eu.trentorise.smartcampus.cm.HomeActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTop" 
             android:configChanges="orientation|screenSize"
-            >
-          <intent-filter>
-                 <action android:name="android.intent.action.MAIN" />
-                 <category android:name="android.intent.category.LAUNCHER" />
-                 <action android:name="eu.trentorise.smartcampus.START" />
-                <category android:name="android.intent.category.DEFAULT" />
-             </intent-filter> 
-        
-            
-        </activity>
-        
-        <activity 
-            android:name="eu.trentorise.smartcampus.cm.SharingActivity" 
-            android:theme="@style/Theme.communitymanager" 
-            android:configChanges="orientation|screenSize"            
-            android:windowSoftInputMode="stateHidden">
-
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             <intent-filter>
-                <action android:name="eu.trentorise.smartcampus.cm.SHARE" />
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="eu.trentorise.smartcampus.START" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
-        </activity>    
-       
+        </activity>
+        <activity
+            android:name="eu.trentorise.smartcampus.cm.SharingActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Theme.communitymanager"
+            android:windowSoftInputMode="stateHidden" >
+            <intent-filter>
+                <action android:name="eu.trentorise.smartcampus.cm.SHARE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.github.espiandev.showcaseview.TutorialActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|keyboard"
@@ -89,6 +85,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-     </application>
+    </application>
 
 </manifest>
