--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="it.smartcampuslab.cm"
-    android:sharedUserId="eu.trentorise.smartcampus.shared"
+    android:sharedUserId="it.smartcampuslab.launcher"
     android:sharedUserLabel="@string/app_uid_label"
     android:versionCode="17"
     android:versionName="0.14.0" >
@@ -28,7 +28,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    
     <application
         android:icon="@drawable/ic_launcher_cm"
         android:label="@string/app_name"
